@@ -1,10 +1,11 @@
 content_title                   = Content management
+settings_title                  = Web site settings
 pages_toolbar                   = Pages
 newpage_toolbar                 = Add page
 content_toolbar                 = Contents
 newcontent_toolbar              = Add content
 addcontent_button               = Add
-global_toolbar                  = Site
+global_toolbar                  = General settings
 save_button                     = Save
 revert_button                   = Revert changes
 content_type_label              = Type
