@@ -1,3 +1,3 @@
 web                         = Web
 impagemanager               = Content
-
+imsitesettings              = Web site
