@@ -1,10 +1,11 @@
 content_title                   = Gestione contenuti
+settings_title                  = Impostazioni sito web
 pages_toolbar                   = Pagine
 newpage_toolbar                 = Aggiungi pagina
 content_toolbar                 = Contenuti
 newcontent_toolbar              = Aggiungi contenuto
 addcontent_button               = Aggiungi
-global_toolbar                  = Sito
+global_toolbar                  = Impostazioni generali
 save_button                     = Salva
 revert_button                   = Annulla le modifiche
 content_type_label              = Tipo
