@@ -1,3 +1,4 @@
 web                         = Web
 impagemanager               = Contenuti
+imsitesettings              = Sito web
 
