@@ -51,15 +51,6 @@ class ImpagemanagerPanelViews extends \Innomatic\Desktop\Panel\PanelViews
             'horiz'         => 'true'
           )
         );
-
-        $this->toolbars['global'] = array(
-          'default' => array(
-            'label'         => $this->localeCatalog->getStr('global_toolbar'),
-            'themeimage'    => 'settings1',
-            'action'        => \Innomatic\Wui\Dispatch\WuiEventsCall::buildEventsCallString('', array(array('view', 'global', ''))),
-            'horiz'         => 'true'
-          )
-        );
     }
 
     public function endHelper()
@@ -235,60 +226,4 @@ class ImpagemanagerPanelViews extends \Innomatic\Desktop\Panel\PanelViews
             </children>
             </vertgroup>';
     }
-
-    public function viewGlobal($eventData)
-    {
-
-        $this->pageXml = '<vertgroup><children>
-          <form><args><id>globalparamsform</id></args><children><divframe><args><id>global_parameters</id></args><children>
-          <label><args><label>'.WuiXml::cdata('NB: I dati di questa sezione sono uguali per tutte le traduzioni.').'</label></args></label>
-          ';
-
-        $this->pageXml .= $this->getController()->getGlobalParametersXml();
-
-        $this->pageXml .= '</children></divframe>
-          </children></form>
-          <horizbar/>
-          <horizgroup><args><width>0%</width></args><children>
-          <button>
-            <args>
-              <horiz>true</horiz>
-              <frame>false</frame>
-              <themeimage>buttonok</themeimage>
-              <label>'.$this->localeCatalog->getStr('save_button').'</label>
-              <action>javascript:void(0)</action>
-            </args>
-    			  <events>
-              <click>'
-                .WuiXml::cdata(
-                  'var kvpairs = [];
-                  var form = document.getElementById(\'globalparamsform\');
-                  for ( var i = 0; i < form.elements.length; i++ ) {
-                     var e = form.elements[i];
-                     kvpairs.push(encodeURIComponent(e.id) + \'=\' + encodeURIComponent(e.value));
-                  }
-                  var params = kvpairs.join(\'&\');
-                  xajax_SaveGlobalParameters(params)'
-                )
-              .'</click>
-    			  </events>
-          </button>
-          <button>
-            <args>
-              <horiz>true</horiz>
-              <frame>false</frame>
-              <themeimage>buttoncancel</themeimage>
-              <label>'.$this->localeCatalog->getStr('revert_button').'</label>
-              <action>javascript:void(0)</action>
-            </args>
-    			  <events>
-    			    <click>xajax_RevertGlobalParameters(\''.$module.'\', \''.$page.'\', \''.$pageId.'\')</click>
-    			  </events>
-          </button>
-          </children></horizgroup>
-          </children>
-          </vertgroup>';
-
-    }
-
 }
